begin fix overflow bike-types

--- a/source/sass/blocks/bike-types.scss
+++ b/source/sass/blocks/bike-types.scss
@@ -1,10 +1,8 @@
 .bike-types {
   box-sizing: border-box;
-  padding-top: 149px;
   background-color: $secondary-background-color;
   width: 100%;
-  padding-left: 60px;
-  padding-right: 60px;
+  padding: 149px 60px 9px;
 
   @media (max-width: $tablet-width) {
     padding: 50px 89px 70px;
@@ -19,7 +17,8 @@
 .bike-types__wrap {
   box-sizing: border-box;
   max-width: 1126px;
-  margin: 0 auto 9px auto;
+  margin: 0 auto;
+  padding-bottom: 100px;
 
   @media (max-width: $tablet-width)  {
     margin-bottom: 0;
