--- a/source/sass/blocks/type-list.scss
+++ b/source/sass/blocks/type-list.scss
@@ -19,8 +19,9 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-  margin-bottom: 140px;
+  margin-bottom: 40px;
   box-sizing: border-box;
+  max-width: 342px;
 
   @media (max-width: $tablet-width) {
     margin-bottom: 0;
@@ -37,9 +38,16 @@
     }
   }
 
+  &:nth-child(3n + 1) {
+    margin-top: 10px;
+  }
+
+  &:nth-child(3n + 2) {
+    margin-top: 39px;
+  }
+
   &--road {
     z-index: 0;
-    margin-top: 10px;
 
     &::before {
       box-sizing: border-box;
@@ -73,8 +81,6 @@
   }
 
   &--mountain {
-    margin-top: 39px;
-
     &::before,
     &::after {
       box-sizing: border-box;
